// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getInitialState about 1`] = `
{
  "customLocation": {
    "description": {
      "entry": {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "main": {
        "key": null,
        "numberOfFilters": 0,
      },
      "other": [
        "about",
      ],
      "protein": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "result": {
        "accession": null,
        "detail": null,
        "job": null,
        "type": null,
      },
      "search": {
        "type": null,
        "value": null,
      },
      "set": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState browse entries 1`] = `
{
  "customLocation": {
    "description": {
      "entry": {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "main": {
        "key": "entry",
        "numberOfFilters": 0,
      },
      "other": [],
      "protein": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "result": {
        "accession": null,
        "detail": null,
        "job": null,
        "type": null,
      },
      "search": {
        "type": null,
        "value": null,
      },
      "set": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState browse proteins 1`] = `
{
  "customLocation": {
    "description": {
      "entry": {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "main": {
        "key": "protein",
        "numberOfFilters": 0,
      },
      "other": [],
      "protein": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "result": {
        "accession": null,
        "detail": null,
        "job": null,
        "type": null,
      },
      "search": {
        "type": null,
        "value": null,
      },
      "set": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState home 1`] = `
{
  "customLocation": {
    "description": {
      "entry": {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "main": {
        "key": null,
        "numberOfFilters": 0,
      },
      "other": [],
      "protein": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "result": {
        "accession": null,
        "detail": null,
        "job": null,
        "type": null,
      },
      "search": {
        "type": null,
        "value": null,
      },
      "set": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState summary entry 1`] = `
{
  "customLocation": {
    "description": {
      "entry": {
        "accession": "IPR000001",
        "db": "InterPro",
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "main": {
        "key": "entry",
        "numberOfFilters": 0,
      },
      "other": [],
      "protein": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "result": {
        "accession": null,
        "detail": null,
        "job": null,
        "type": null,
      },
      "search": {
        "type": null,
        "value": null,
      },
      "set": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": {},
  },
  "settings": undefined,
}
`;

exports[`getInitialState summary protein 1`] = `
{
  "customLocation": {
    "description": {
      "entry": {
        "accession": null,
        "db": null,
        "detail": null,
        "integration": null,
        "isFilter": null,
        "memberDB": null,
        "memberDBAccession": null,
        "order": null,
      },
      "main": {
        "key": "protein",
        "numberOfFilters": 0,
      },
      "other": [],
      "protein": {
        "accession": "A0A023GPI8",
        "db": "reviewed",
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "proteome": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "result": {
        "accession": null,
        "detail": null,
        "job": null,
        "type": null,
      },
      "search": {
        "type": null,
        "value": null,
      },
      "set": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "structure": {
        "accession": null,
        "chain": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
      "taxonomy": {
        "accession": null,
        "db": null,
        "detail": null,
        "isFilter": null,
        "order": null,
      },
    },
    "hash": "",
    "search": {},
  },
  "settings": undefined,
}
`;
